# ChangeLog for xfce-extra/xfce4-battery
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-battery/ChangeLog,v 1.35 2006/12/28 04:25:58 nichoj Exp $

  28 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  xfce4-battery-0.3.0-r2.ebuild:
  Fixed dependencies, see bug #130573.

  21 Dec 2006; Markus Rothe <corsair@gentoo.org>
  xfce4-battery-0.3.0-r2.ebuild:
  Stable on ppc64; bug #157881

  21 Dec 2006; Jeroen Roovers <jer@gentoo.org>
  xfce4-battery-0.3.0-r1.ebuild, xfce4-battery-0.3.0-r2.ebuild,
  xfce4-battery-0.4.90.3.ebuild, xfce4-battery-0.4.90.3-r1.ebuild:
  Bah. Easier to keyword an extra package than to sift through meta-packages.
  Reverting previous changes.

  21 Dec 2006; Jeroen Roovers <jer@gentoo.org>
  xfce4-battery-0.3.0-r1.ebuild, xfce4-battery-0.3.0-r2.ebuild,
  xfce4-battery-0.4.90.3.ebuild, xfce4-battery-0.4.90.3-r1.ebuild:
  Removing hppa keywording; unless someone comes up with a battery-supported
  PARISC system <http://openpa.net/systems/index.html#portable> running Gentoo
  Linux (bug #157881).

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  xfce4-battery-0.3.0-r2.ebuild:
  Stable on ppc wrt bug #157881.

  10 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  xfce4-battery-0.4.90.3-r1.ebuild:
  Fixed RDEPEND.

*xfce4-battery-0.4.90.3-r1 (10 Dec 2006)

  10 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  +xfce4-battery-0.4.90.3-r1.ebuild:
  Improvements suggested by Sideris Michael <msid@daemons.gr>, in bug #157562.

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  -xfce4-battery-0.2.0-r1.ebuild, -xfce4-battery-0.3.0.ebuild:
  Pruned old versions with new versions with same or better keywords.

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  -files/digest-xfce4-battery-0.2.0-r1, -files/digest-xfce4-battery-0.3.0,
  Manifest:
  Pruned old versions with new versions with same or better keywords.

*xfce4-battery-0.4.90.3 (10 Dec 2006)
