@@ -1,0 +1,3 @@
+MD5 c1d923bb90b79087ca7044bcc24bab5a xfce4-battery-plugin-0.5.0.tar.bz2 222269
+RMD160 bbf64994c7686b11b6a51bd7728569cd2a5d9777 xfce4-battery-plugin-0.5.0.tar.bz2 222269
+SHA256 4428f2fe1f5f28e6cc711278fd9c5c90f325cf0c5298f98a5d60940116cbcef8 xfce4-battery-plugin-0.5.0.tar.bz2 222269
