@@ -1,0 +1,16 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-battery/xfce4-battery-0.5.0.ebuild,v 1.1 2007/01/21 16:59:00 nichoj Exp $
+
+inherit xfce44
+
+xfce44_beta
+xfce44_goodies_panel_plugin
+
+DESCRIPTION="Xfce4 battery status panel plugin"
+
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
+IUSE="debug"
+
+DEPEND="dev-util/intltool"
+RDEPEND="${DEPEND}"
