@@ -1,6 +1,13 @@
 # ChangeLog for xfce-extra/xfce4-battery
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-battery/ChangeLog,v 1.35 2006/12/28 04:25:58 nichoj Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-battery/ChangeLog,v 1.36 2007/01/21 16:59:00 nichoj Exp $
+
+*xfce4-battery-0.5.0 (21 Jan 2007)
+
+  21 Jan 2007; Joshua Nichols <nichoj@gentoo.org>
+  +xfce4-battery-0.5.0.ebuild:
+  Version bump reported by Samuli Suominen <sasuomin@uusikaupunki.fi> on bug
+  #163072. Dropped dependencies which get brought in by the eclass.
 
   28 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
   xfce4-battery-0.3.0-r2.ebuild:
